@@ -40,6 +40,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|Serializable
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Hashtable
@@ -110,7 +120,18 @@ class|class
 name|RAMDirectory
 extends|extends
 name|Directory
+implements|implements
+name|Serializable
 block|{
+DECL|field|serialVersionUID
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|serialVersionUID
+init|=
+literal|1l
+decl_stmt|;
 DECL|field|files
 name|Hashtable
 name|files
