@@ -26,11 +26,32 @@ name|Vector
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|Serializable
+import|;
+end_import
+
 begin_class
 DECL|class|RAMFile
 class|class
 name|RAMFile
+implements|implements
+name|Serializable
 block|{
+DECL|field|serialVersionUID
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|serialVersionUID
+init|=
+literal|1l
+decl_stmt|;
 DECL|field|buffers
 name|Vector
 name|buffers
